--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,4 +7,8 @@
         @apply hidden h-6 md:inline-flex cursor-pointer
         hover:scale-125 transition-all duration-150 ease-out
     }
+
+    .btn {
+        @apply h-7 hover:scale-125 cursor-pointer transition-all duration-150 ease-out
+    }
 }
